v2/readme.md
# YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:

* Name
* Image

## Layout and Basic Styling

* Create header and footer partials
* Add in Bootstrap

## Creating New Campgrounds

* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

## Style the campgrounds page

* Add a better header/title
* Make campgrounds display in a grid

## Style the Navbar and Form

* Add a navbar to all templates
* Style the new campground form

## Add Mongoose

* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes!

## Show Page

* Review the RESTful route
* Add description nto our campground model
* Show db.collection.drop()
* Add a show route/template

<!-- # Heading 1

## Heading 2 text

Hello World!

We will output Markdown to:

- HTML
- docx
- PDF

LInk to [http://www.google.com/](Google) -->
