v3/readme.md
# YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds

Each Campground has:

* Name
* Image

## Layout and Basic Styling

* Create header and footer partials
* Add in Bootstrap

## Creating New Campgrounds

* Setup new campground POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

## Style the campgrounds page

* Add a better header/title
* Make campgrounds display in a grid

## Style the Navbar and Form

* Add a navbar to all templates
* Style the new campground form

## Add Mongoose

* Install and configure mongoose
* Setup campground model
* Use campground model inside of our routes!

## Show Page

* Review the RESTful route
* Add description nto our campground model
* Show db.collection.drop()
* Add a show route/template

## Refactor Mongoose Code

* Create a models directory
* Use module.exports
* Require everything correctly

## Add Seeds File

* Add a seecs.js file
* Run the seeds file every time the server starts

## Add the Comment model

* Make our errors go away
* Display comments on campground show page

## Comment New/Create

* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form

<!-- # Heading 1

## Heading 2 text

Hello World!

We will output Markdown to:

- HTML
- docx
- PDF

LInk to [http://www.google.com/](Google) -->
